--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -15,8 +15,9 @@
 -->
 <link rel='import' href='../bower_components/polymer/polymer.html'>
 <link rel='import' href='../bower_components/paper-button/paper-button.html'>
+<link rel='import' href='../bower_components/paper-dropdown-menu/paper-dropdown-menu.html'>
 <link rel='import' href='../bower_components/paper-input/paper-input.html'>
-<link rel='import' href='../bower_components/paper-checkbox/paper-checkbox.html'>
+<link rel='import' href='../bower_components/paper-toggle-button/paper-toggle-button.html'>
 
 <link rel='import' href='./cloud-install-styles.html'>
 <link rel='import' href='./outline-server-settings-styles.html'>
@@ -55,31 +56,83 @@
       }
       .setting p {
         margin-bottom: 12px;
-        width: 60%;
+        width: 80%;
         color: var(--medium-gray);
       }
-      #metricsHeader {
+      #experiments .sub-section p {
+        width: 100%;
+      }
+      .sub-section {
+        background: var(--border-color);
+        padding: 16px;
+        margin: 24px 0;
+        display: flex;
+        align-items: center;
+        border-radius: 2px;
+      }
+      .sub-section iron-icon {
+        margin-right: 16px;
+      }
+      .space-between {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
+      }
+      .data-limits-input {
+        display: flex;
+        align-items: center;
+      }
+      .data-limits-input paper-input:not([readonly]) {
+        width: auto;
+        --paper-input-container: {
+          width: 120px;
+        };
       }
       .detail {
         margin-top: 0px;
         font-size: 12px;
       }
-      .clickable {
-        cursor: pointer;
+      paper-input:not([readonly]) {
+        width: 60%;
       }
-      paper-checkbox {
-        /* We want the ink to be the color we're going to, not coming from */
-        --paper-checkbox-checked-color: var(--primary-green);
-        --paper-checkbox-checked-ink-color: var(--dark-gray);
-        --paper-checkbox-unchecked-color: var(--light-gray);
-        --paper-checkbox-unchecked-ink-color: var(--primary-green);
+      paper-toggle-button {
+        --paper-toggle-button-checked-bar-color: var(--primary-green);
+        --paper-toggle-button-checked-button-color: var(--primary-green);
+        --paper-toggle-button-checked-ink-color: var(--primary-green);
+        --paper-toggle-button-unchecked-bar-color: var(--dark-gray);
       }
       .link {
         text-decoration: underline;
         color: var(--medium-gray);
+      }
+      paper-dropdown-menu {
+        --paper-input-container: {
+          text-align: center;
+          width: 64px;
+        };
+        --paper-input-container-input: {
+          color: var(--medium-gray);
+        };
+        --paper-dropdown-menu-ripple: {
+          display: none;
+        };
+        --paper-input-container-underline: {
+          display: none;
+        };
+        --paper-input-container-underline-focus: {
+          display: none;
+        }
+      }
+      paper-listbox paper-item:hover {
+          cursor: pointer;
+          background-color: #eee;
+      }
+      #data-limits-container .space-between h3 {
+        font-weight: normal;
+        margin-bottom: 8px;
+      }
+      #data-limits-container .space-between p {
+        margin: 0 0 24px 0;
       }
     </style>
     <div class="container">
@@ -98,6 +151,7 @@
           <iron-icon class="setting-icon" icon="outline-iconset:outline"></iron-icon>
           <div>
             <h3>[[localize('settings-server-info')]]</h3>
+            <!-- TODO: make this outline-validated-input -->
             <paper-input id="serverNameInput" class="server-name" value="{{name}}" label="[[localize('settings-server-name')]]" always-float-label maxlength="100" on-keydown="_handleNameInputKeyDown" on-blur="_handleNameInputBlur"></paper-input>
             <p class="detail">[[localize('settings-server-rename')]]</p>
             <outline-validated-input
@@ -111,13 +165,44 @@
             <paper-input readonly value="[[serverId]]" label="[[localize('settings-server-id')]]" hidden$="[[!serverId]]" always-float-label maxlength="100"></paper-input>
           </div>
         </div>
+        <!-- Experiments -->
+        <div id="experiments" class="setting card-section" hidden$="[[!shouldShowExperiments]]">
+            <iron-icon class="setting-icon" icon="icons:build"></iron-icon>
+            <div>
+              <h3>[[localize('experiments')]]</h3>
+              <!-- TODO: link to feedback form -->
+              <p inner-h-t-m-l="[[localize('experiments-description', 'openLink', '<a href=#>', 'closeLink', '</a>')]]"></p>
+              <div class="sub-section">
+                <iron-icon icon="icons:error-outline"></iron-icon>
+                <p inner-h-t-m-l="[[localize('experiments-disclaimer', 'openLink', '<a href=https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection>', 'closeLink', '</a>')]]"></p>
+              </div>
+              <div id="data-limits-container" hidden$="[[!supportsAccessKeyDataLimit]]">
+                <div class="space-between">
+                  <div>
+                    <h3>[[localize('data-limits')]]</h3>
+                    <p>[[localize('data-limits-description', 'date', dataLimitsAvailabilityDate)]]</p>
+                  </div>
+                  <paper-toggle-button id="dataLimitsToggle" checked="{{isAccessKeyDataLimitEnabled}}" on-checked-changed="_accessKeyDataLimitEnabledChanged"></paper-toggle-button>
+                </div>
+                <div class="data-limits-input" hidden$="[[!isAccessKeyDataLimitEnabled]]">
+                  <paper-input id="accessKeyDataLimitInput" value="[[accessKeyDataLimit.value]]" label="Data limit per key" always-float-label allowed-pattern="[0-9]+" required auto-validate maxlength="9" on-keydown="_handleAccessKeyDataLimitInputKeyDown" on-blur="_requestSetAccessKeyDataLimit"></paper-input>
+                  <paper-dropdown-menu no-label-float>
+                    <paper-listbox id="accessKeyDataLimitUnits" slot="dropdown-content" selected="[[accessKeyDataLimit.unit]]" attr-for-selected="name" on-selected-changed="_requestSetAccessKeyDataLimit">
+                      <paper-item name="MB">MB</paper-item>
+                      <paper-item name="GB">GB</paper-item>
+                    </paper-listbox>
+                  </paper-dropdown-menu>
+                </div>
+              </div>
+            </div>
+        </div>
         <!-- Metrics controls -->
         <div class="setting card-section">
           <iron-icon class="setting-icon" icon="editor:insert-chart"></iron-icon>
           <div>
-            <div id="metricsHeader">
+            <div class="space-between">
               <h3>[[localize('settings-metrics-header')]]</h3>
-              <paper-checkbox id="metricsCheckbox" checked="{{metricsEnabled}}"></paper-checkbox>
+              <paper-toggle-button checked="{{metricsEnabled}}"></paper-toggle-button>
             </div>
             <p inner-h-t-m-l="[[localize('metrics-description', 'openLink', '<a class=link href=https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection>', 'closeLink', '</a>')]]"></p>
           </div>
@@ -138,6 +223,10 @@
         serverManagementApiUrl: {type: String, value: null},
         serverPortForNewAccessKeys: {type: Number, value: null},
         isAccessKeyPortEditable: {type: Boolean, value: false},
+        isAccessKeyDataLimitEnabled: {type: Boolean, notify: true},
+        accessKeyDataLimit: {type: Object, value: null}, // type: app.DisplayDataAmount
+        supportsAccessKeyDataLimit: {type: Boolean, value: false}, // Whether the server supports data limits.
+        dataLimitsAvailabilityDate: {type: String}, // Date by which the feature stops being an experiment.
         isHostnameEditable: {type: Boolean, value: true},
         serverCreationDate: {type: String, value: null},
         serverLocation: {type: String, value: null},
@@ -145,7 +234,8 @@
         serverMonthlyTransferLimit: {type: String, value: null},
         localize: {type: Function, readonly: true},
         enableKeysPortButtons: {type: Boolean, value: false},
-        showKeysPortButtons: {type: Boolean, value: false}
+        showKeysPortButtons: {type: Boolean, value: false},
+        shouldShowExperiments: {type: Boolean, computed: '_computeShouldShowExperiments(supportsAccessKeyDataLimit)'},
       },
       update: function(name, metricsEnabled) {
         this.initialName = name;
@@ -183,11 +273,36 @@
           this.fire(metricsSignal);
         }
       },
+      _accessKeyDataLimitEnabledChanged: function(e) {
+        const wasDataLimitEnabled = this.isAccessKeyDataLimitEnabled;
+        const isDataLimitEnabled = e.detail.value;
+        if (isDataLimitEnabled === undefined || wasDataLimitEnabled === undefined) {
+          return;
+        } else if (isDataLimitEnabled === wasDataLimitEnabled) {
+          return;
+        }
+        if (isDataLimitEnabled) {
+          this._requestSetAccessKeyDataLimit();
+        } else {
+          this.fire('RemoveAccessKeyDataLimitRequested');
+        }
+      },
+      _requestSetAccessKeyDataLimit: function() {
+        if (this.$.accessKeyDataLimitInput.invalid) {
+          return;
+        }
+        const value = Number(this.$.accessKeyDataLimitInput.value);
+        const unit = this.$.accessKeyDataLimitUnits.selected;
+        this.fire('SetAccessKeyDataLimitRequested', {limit: {value, unit}});
+      },
+      _computeShouldShowExperiments: function(supportsAccessKeyDataLimit) {
+        return supportsAccessKeyDataLimit;
+      },
       _validatePort: function(value) {
         const port = Number(value);
         const valid = !Number.isNaN(port) && port >= 1 && port <= 65535 && Number.isInteger(port);
         return valid ? "" : this.localize("error-keys-port-bad-input");
-      }  
+      }
     });
   </script>
 </dom-module>
