--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -25,6 +25,7 @@
 <link rel='import' href='../bower_components/paper-menu-button/paper-menu-button.html'>
 <link rel='import' href='../bower_components/paper-progress/paper-progress.html'>
 <link rel='import' href='../bower_components/paper-tabs/paper-tabs.html'>
+<link rel='import' href='../bower_components/paper-tooltip/paper-tooltip.html'>
 
 <link rel='import' href='./cloud-install-styles.html'>
 <link rel='import' href='./outline-iconset.html'>
@@ -188,15 +189,22 @@
         align-items: center;
       }
       .measurement-container paper-progress {
-        height: 3px;
         max-width: 72px;
         margin: 0 24px 0 12px;
+        --paper-progress-height: 8px;
         --paper-progress-active-color: var(--primary-green);
+      }
+      .measurement-container paper-progress.data-limits {
+        border: 1px solid var(--primary-green);
+        border-radius: 2px;
       }
       @media (max-width: 640px) {
         .measurement-container paper-progress {
           width: 48px;
         }
+      }
+      paper-progress.data-limits:hover {
+        cursor: pointer;
       }
       .measurement {
         /* Space the usage bars evenly */
@@ -317,9 +325,6 @@
         font-size: 16px;
         margin: 0px 0px 12px 0px;
       }
-      outline-help-bubble paper-button {
-        color: white;
-      }
       outline-help-bubble img {
         width: 76px;
         height: auto;
@@ -360,7 +365,7 @@
         <div class="tabs-spacer"></div>
         <paper-tabs selected="{{selectedTab}}" attr-for-selected="name" noink>
           <paper-tab name="connections">[[localize('server-connections')]]</paper-tab>
-          <paper-tab name="settings">[[localize('server-settings')]]</paper-tab>
+          <paper-tab name="settings" id="settingsTab">[[localize('server-settings')]]</paper-tab>
         </paper-tabs>
       </div>
 
@@ -437,7 +442,10 @@
               </span>
               <span class="measurement-container">
                   <span class="measurement">[[_formatBytesTransferred(myConnection.transferredBytes, "...")]]</span>
-                  <paper-progress value='[[myConnection.relativeTraffic]]'></paper-progress>
+                  <paper-progress value="[[myConnection.relativeTraffic]]" class$="[[_computePaperProgressClass(isAccessKeyDataLimitEnabled)]]"></paper-progress>
+                  <paper-tooltip animation-delay="0" offset="0" position="top" hidden$="[[!isAccessKeyDataLimitEnabled]]">
+                    [[_getDataLimitsUsageString(myConnection)]]
+                  </paper-tooltip>
                 </span>
               <span class="actions">
                 <span class="flex-1">
@@ -462,7 +470,10 @@
                 </span>
                 <span class="measurement-container">
                   <span class="measurement">[[_formatBytesTransferred(item.transferredBytes, "...")]]</span>
-                  <paper-progress value='[[item.relativeTraffic]]'></paper-progress>
+                  <paper-progress value='[[item.relativeTraffic]]' class$="[[_computePaperProgressClass(isAccessKeyDataLimitEnabled)]]"></paper-progress>
+                  <paper-tooltip animation-delay="0" offset="0" position="top" hidden$="[[!isAccessKeyDataLimitEnabled]]">
+                    [[_getDataLimitsUsageString(item)]]
+                  </paper-tooltip>
                 </span>
                 <span class="actions">
                   <span class="flex-1">
@@ -503,6 +514,10 @@
             server-management-api-url="[[serverManagementApiUrl]]"
             server-port-for-new-access-keys="[[serverPortForNewAccessKeys]]"
             is-access-key-port-editable="[[isAccessKeyPortEditable]]"
+            access-key-data-limit="{{accessKeyDataLimit}}"
+            is-access-key-data-limit-enabled="{{isAccessKeyDataLimitEnabled}}"
+            data-limits-availability-date="[[dataLimitsAvailabilityDate]]"
+            supports-access-key-data-limit="[[supportsAccessKeyDataLimit]]"
             server-creation-date="[[serverCreationDate]]"
             server-monthly-cost="[[monthlyCost]]"
             server-monthly-transfer-limit="[[_formatBytesTransferred(monthlyOutboundTransferBytes)]]"
@@ -524,7 +539,12 @@
       <img src="images/key-tip-2x.png">
       <h3>[[localize('server-help-access-key-title')]]</h3>
       <p>[[localize('server-help-access-key-description')]]</p>
-      <paper-button on-tap="showGetConnectedHelpBubble">[[localize('server-help-access-key-next')]]</paper-button>
+      <paper-button on-tap="closeAddAccessKeyHelpBubble">[[localize('server-help-access-key-next')]]</paper-button>
+    </outline-help-bubble>
+    <outline-help-bubble id="dataLimitsHelpBubble" vertical-align="top" horizontal-align="right">
+      <h3>[[localize('data-limits-dialog-title')]]</h3>
+      <p>[[localize('data-limits-dialog-text')]]</p>
+      <paper-button on-tap="closeDataLimitsHelpBubble">[[localize('ok')]]</paper-button>
     </outline-help-bubble>
 
   </template>
@@ -546,6 +566,10 @@
         isAccessKeyPortEditable: {type: Boolean, value: false},
         serverCreationDate: String,
         serverLocation: String,
+        accessKeyDataLimit: {type: Object, value: null},
+        isAccessKeyDataLimitEnabled: {type: Boolean},
+        supportsAccessKeyDataLimit: {type: Boolean, value: false}, // Whether the server supports data limits.
+        dataLimitsAvailabilityDate: {type: String}, // Date by which the feature stops being an experiment.
         isServerManaged: Boolean,
         isServerReachable: Boolean,
         // Callback for retrying to display an unreachable server.
@@ -697,9 +721,9 @@
 
         // Show 0 decimals for < 1MB, 1 decimal for >= 1MB, 2 decimals for >= 1GB.
         let numDecimals = 0;
-        if (numBytes >= Math.pow(2, 30)) {
+        if (numBytes >= 10 ** 9) {
           numDecimals = 2;
-        } else if (numBytes >= Math.pow(2, 20)) {
+        } else if (numBytes >= 10 ** 6) {
           numDecimals = 1;
         }
 
@@ -751,40 +775,43 @@
           this.$.getConnectedHelpBubble.hide();
         }
       },
-      showGetConnectedHelpBubble: function() {
-        if (this.myConnection) {
-          this.$.addAccessKeyHelpBubble.hide();
-          this.showHelpBubbleOnce('getConnectedHelpBubble', 'managerRow');
+      _selectedTabChanged(selectedTab) {
+        if (this.selectedTab === 'settings') {
+          this.closeAddAccessKeyHelpBubble();
+          this.closeGetConnectedHelpBubble();
+          this.closeDataLimitsHelpBubble();
+          this.$.serverSettings.update(this.serverName, this.metricsEnabled);
         }
+      },
+      // Help bubbles should be shown after this outline-server-view
+      // is on the screen (e.g. selected in iron-pages). If help bubbles
+      // are initialized before this point, setPosition will not work and
+      // they will appear in the top left of the view.
+      showGetConnectedHelpBubble: function() {
+        return this._showHelpBubble('getConnectedHelpBubble', 'managerRow');
+      },
+      showAddAccessKeyHelpBubble: function() {
+        return this._showHelpBubble('addAccessKeyHelpBubble', 'addAccessKeyRow', 'down', 'left')
+      },
+      showDataLimitsHelpBubble: function() {
+        return this._showHelpBubble('dataLimitsHelpBubble', 'settingsTab', 'up', 'right');
+      },
+      closeAddAccessKeyHelpBubble: function() {
+        this.$.addAccessKeyHelpBubble.hide();
       },
       closeGetConnectedHelpBubble: function() {
         this.$.getConnectedHelpBubble.hide();
       },
-      _selectedTabChanged(selectedTab) {
-        if (this.selectedTab === 'settings') {
-          this.$.addAccessKeyHelpBubble.hide();
-          this.$.serverSettings.update(this.serverName, this.metricsEnabled);
-        }
+      closeDataLimitsHelpBubble: function() {
+        this.$.dataLimitsHelpBubble.hide();
       },
-      // initHelpBubbles should be called after this outline-server-view
-      // is on the screen (e.g. selected in iron-pages).  If help bubbles
-      // are initialized before this point, setPosition will not work and
-      // they will appear in the top left of the view.
-      initHelpBubbles: function() {
-        this.showHelpBubbleOnce('addAccessKeyHelpBubble', 'addAccessKeyRow', 'down', 'left');
-      },
-      showHelpBubbleOnce: function(helpBubbleId, positionTargetId,
-                                   arrowDirection='down', arrowAlignment='right') {
-        const storageKey = helpBubbleId + '-dismissed';
-        if (window.localStorage.getItem(storageKey)) {
-          // Help bubble has already been dismissed, nothing to show.
-          return;
-        }
-        const helpBubble = this.$[helpBubbleId];
-        helpBubble.show(this.$[positionTargetId], arrowDirection, arrowAlignment);
-        helpBubble.addEventListener('outline-help-bubble-dismissed', function(e) {
-          window.localStorage.setItem(storageKey, true);
-        }.bind(this));
+      _showHelpBubble: function(helpBubbleId, positionTargetId, arrowDirection='down',
+                                arrowAlignment='right') {
+        return new Promise((resolve) => {
+          const helpBubble = this.$[helpBubbleId];
+          helpBubble.show(this.$[positionTargetId], arrowDirection, arrowAlignment);
+          helpBubble.addEventListener('outline-help-bubble-dismissed', resolve);
+        });
       },
       isRegularConnection: function(item) {
         return item.id !== MY_CONNECTION_USER_ID;
@@ -826,6 +853,17 @@
       },
       removeServer: function() {
         this.fire('ForgetServerRequested');
+      },
+      _computePaperProgressClass: function(isAccessKeyDataLimitEnabled) {
+        return isAccessKeyDataLimitEnabled ? 'data-limits' : '';
+      },
+      _getDataLimitsUsageString: function(accessKey) {
+        if (!this.accessKeyDataLimit) {
+          return '';
+        }
+        const used = this._formatBytesTransferred(accessKey.transferredBytes, '0');
+        const total = this.accessKeyDataLimit.value + ' ' + this.accessKeyDataLimit.unit;
+        return this.localize('data-limits-usage', 'used', used, 'total', total);
       }
     });
   </script>
