Settings page improvements (#567)

--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -510,6 +510,7 @@
             id="serverSettings"
             server-id="[[serverId]]"
             server-hostname="[[serverHostname]]"
+            server-name="[[serverName]]"
             is-hostname-editable="[[isHostnameEditable]]"
             server-management-api-url="[[serverManagementApiUrl]]"
             server-port-for-new-access-keys="[[serverPortForNewAccessKeys]]"
