--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -15,9 +15,9 @@
 -->
 <link rel='import' href='../bower_components/polymer/polymer.html'>
 <link rel='import' href='../bower_components/paper-button/paper-button.html'>
+<link rel='import' href='../bower_components/paper-checkbox/paper-checkbox.html'>
 <link rel='import' href='../bower_components/paper-dropdown-menu/paper-dropdown-menu.html'>
 <link rel='import' href='../bower_components/paper-input/paper-input.html'>
-<link rel='import' href='../bower_components/paper-toggle-button/paper-toggle-button.html'>
 
 <link rel='import' href='./cloud-install-styles.html'>
 <link rel='import' href='./outline-server-settings-styles.html'>
@@ -56,8 +56,11 @@
       }
       .setting p {
         margin-bottom: 12px;
-        width: 80%;
+        width: 60%;
         color: var(--medium-gray);
+      }
+      #experiments p {
+        width: 80%;
       }
       #experiments .sub-section p {
         width: 100%;
@@ -73,10 +76,16 @@
       .sub-section iron-icon {
         margin-right: 16px;
       }
-      .space-between {
+      .selection-container {
         display: flex;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: baseline;
+      }
+      .selection-container > .content {
+        flex: 4;
+      }
+      .selection-container > paper-dropdown-menu {
+        flex: 1;
       }
       .data-limits-input {
         display: flex;
@@ -95,23 +104,17 @@
       paper-input:not([readonly]) {
         width: 60%;
       }
-      paper-toggle-button {
-        --paper-toggle-button-checked-bar-color: var(--primary-green);
-        --paper-toggle-button-checked-button-color: var(--primary-green);
-        --paper-toggle-button-checked-ink-color: var(--primary-green);
-        --paper-toggle-button-unchecked-bar-color: var(--dark-gray);
-      }
-      .link {
-        text-decoration: underline;
-        color: var(--medium-gray);
-      }
       paper-dropdown-menu {
+        border: 1px solid var(--medium-gray);
+        border-radius: 4px;
+        max-width: 150px;
         --paper-input-container: {
+          padding: 0 4px;
           text-align: center;
-          width: 64px;
         };
         --paper-input-container-input: {
           color: var(--medium-gray);
+          font-size: 14px;
         };
         --paper-dropdown-menu-ripple: {
           display: none;
@@ -123,16 +126,39 @@
           display: none;
         }
       }
+      .data-limits-input paper-dropdown-menu {
+        border: none;
+        --paper-input-container: {
+          width: 64px;
+        };
+      }
+      paper-listbox paper-item {
+        font-size: 14px;
+      }
       paper-listbox paper-item:hover {
           cursor: pointer;
           background-color: #eee;
       }
-      #data-limits-container .space-between h3 {
+      #data-limits-container .selection-container h3 {
         font-weight: normal;
         margin-bottom: 8px;
       }
-      #data-limits-container .space-between p {
+      #data-limits-container .selection-container p {
         margin: 0 0 24px 0;
+      }
+      #data-limits-container .selection-container span {
+        display: block;
+        margin-top: 6px;
+      }
+      paper-checkbox {
+        /* We want the ink to be the color we're going to, not coming from */
+        --paper-checkbox-checked-color: var(--primary-green);
+        --paper-checkbox-checked-ink-color: var(--dark-gray);
+        --paper-checkbox-unchecked-color: var(--light-gray);
+        --paper-checkbox-unchecked-ink-color: var(--primary-green);
+      }
+      .selection-container paper-checkbox {
+        margin-right: 4px;
       }
     </style>
     <div class="container">
@@ -151,8 +177,8 @@
           <iron-icon class="setting-icon" icon="outline-iconset:outline"></iron-icon>
           <div>
             <h3>[[localize('settings-server-info')]]</h3>
-            <!-- TODO: make this outline-validated-input -->
-            <paper-input id="serverNameInput" class="server-name" value="{{name}}" label="[[localize('settings-server-name')]]" always-float-label maxlength="100" on-keydown="_handleNameInputKeyDown" on-blur="_handleNameInputBlur"></paper-input>
+            <!-- TODO: consider making this an outline-validated-input -->
+            <paper-input id="serverNameInput" class="server-name" value="{{serverName}}" label="[[localize('settings-server-name')]]" always-float-label maxlength="100" on-keydown="_handleNameInputKeyDown" on-blur="_handleNameInputBlur"></paper-input>
             <p class="detail">[[localize('settings-server-rename')]]</p>
             <outline-validated-input
               editable="[[isAccessKeyPortEditable]]" visible="[[serverPortForNewAccessKeys]]" label="[[localize('settings-access-key-port')]]" allowed-pattern="[0-9]{1,5}" max-length="5" value="[[serverPortForNewAccessKeys]]" client-side-validator="[[_validatePort]]" event="ChangePortForNewAccessKeysRequested" localize="[[localize]]"
@@ -170,19 +196,29 @@
             <iron-icon class="setting-icon" icon="icons:build"></iron-icon>
             <div>
               <h3>[[localize('experiments')]]</h3>
-              <!-- TODO: link to feedback form -->
-              <p inner-h-t-m-l="[[localize('experiments-description', 'openLink', '<a href=#>', 'closeLink', '</a>')]]"></p>
+              <p>[[localize('experiments-description')]]</p>
               <div class="sub-section">
                 <iron-icon icon="icons:error-outline"></iron-icon>
                 <p inner-h-t-m-l="[[localize('experiments-disclaimer', 'openLink', '<a href=https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection>', 'closeLink', '</a>')]]"></p>
               </div>
               <div id="data-limits-container" hidden$="[[!supportsAccessKeyDataLimit]]">
-                <div class="space-between">
-                  <div>
+                <div class="selection-container">
+                  <div class="content">
                     <h3>[[localize('data-limits')]]</h3>
-                    <p>[[localize('data-limits-description', 'date', dataLimitsAvailabilityDate)]]</p>
+                    <p>
+                      [[localize('data-limits-description', 'date', dataLimitsAvailabilityDate)]]<br/>
+                      <!-- TODO: link to feedback form -->
+                      <span inner-h-t-m-l="[[localize('experiments-feedback', 'openLink', '<a href=#>', 'closeLink', '</a>')]]"></span>
+                    </p>
                   </div>
-                  <paper-toggle-button id="dataLimitsToggle" checked="{{isAccessKeyDataLimitEnabled}}" on-checked-changed="_accessKeyDataLimitEnabledChanged"></paper-toggle-button>
+                  <!-- NOTE: The dropdown is not automatically sized to the button's width:
+                             https://github.com/PolymerElements/paper-dropdown-menu/issues/229 -->
+                  <paper-dropdown-menu no-label-float horizontal-align="left">
+                    <paper-listbox slot="dropdown-content" selected="{{_computeDataLimitsEnabledName(isAccessKeyDataLimitEnabled)}}" attr-for-selected="name" on-selected-changed="_accessKeyDataLimitEnabledChanged">
+                      <paper-item name="enabled">[[localize('enabled')]]</paper-item>
+                      <paper-item name="disabled">[[localize('disabled')]]</paper-item>
+                    </paper-listbox>
+                  </paper-dropdown-menu>
                 </div>
                 <div class="data-limits-input" hidden$="[[!isAccessKeyDataLimitEnabled]]">
                   <paper-input id="accessKeyDataLimitInput" value="[[accessKeyDataLimit.value]]" label="Data limit per key" always-float-label allowed-pattern="[0-9]+" required auto-validate maxlength="9" on-keydown="_handleAccessKeyDataLimitInputKeyDown" on-blur="_requestSetAccessKeyDataLimit"></paper-input>
@@ -200,11 +236,11 @@
         <div class="setting card-section">
           <iron-icon class="setting-icon" icon="editor:insert-chart"></iron-icon>
           <div>
-            <div class="space-between">
-              <h3>[[localize('settings-metrics-header')]]</h3>
-              <paper-toggle-button checked="{{metricsEnabled}}"></paper-toggle-button>
+            <div class="selection-container">
+              <paper-checkbox checked="{{metricsEnabled}}"></paper-checkbox>
+                <h3>[[localize('settings-metrics-header')]]</h3>
             </div>
-            <p inner-h-t-m-l="[[localize('metrics-description', 'openLink', '<a class=link href=https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection>', 'closeLink', '</a>')]]"></p>
+            <p inner-h-t-m-l="[[localize('metrics-description', 'openLink', '<a href=https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection>', 'closeLink', '</a>')]]"></p>
           </div>
         </div>
       </div>
@@ -215,8 +251,8 @@
       is: 'outline-server-settings',
       properties: {
         isServerManaged: Boolean,
-        name: String,
-        metricsEnabled: { type: Boolean, observer: '_metricsEnabledChanged' },
+        serverName: String,
+        metricsEnabled: {type: Boolean, observer: '_metricsEnabledChanged'},
         // Initialize to null so we can use the hidden attribute, which does not work well with undefined values.
         serverId: {type: String, value: null},
         serverHostname: {type: String, value: null},
@@ -233,8 +269,6 @@
         serverMonthlyCost: {type: String, value: null},
         serverMonthlyTransferLimit: {type: String, value: null},
         localize: {type: Function, readonly: true},
-        enableKeysPortButtons: {type: Boolean, value: false},
-        showKeysPortButtons: {type: Boolean, value: false},
         shouldShowExperiments: {type: Boolean, computed: '_computeShouldShowExperiments(supportsAccessKeyDataLimit)'},
       },
       update: function(name, metricsEnabled) {
@@ -244,21 +278,20 @@
       },
       _handleNameInputKeyDown: function(event) {
         if (event.key === 'Escape') {
-          this.name = this.initialName;
+          this.serverName = this.initialName;
           this.$.serverNameInput.blur();
         } else if (event.key === 'Enter') {
           this.$.serverNameInput.blur();
         }
       },
       _handleNameInputBlur: function(event) {
-        const newName = this.name;
+        const newName = this.serverName;
         if (!newName) {
-          this.name = this.initialName;
+          this.serverName = this.initialName;
           return;
         }
         // Fire signal if name has changed.
         if (newName !== this.initialName) {
-          this.initialName = newName
           this.fire('ServerRenameRequested', {newName});
         }
       },
@@ -275,16 +308,25 @@
       },
       _accessKeyDataLimitEnabledChanged: function(e) {
         const wasDataLimitEnabled = this.isAccessKeyDataLimitEnabled;
-        const isDataLimitEnabled = e.detail.value;
+        const isDataLimitEnabled = e.detail.value === 'enabled';
         if (isDataLimitEnabled === undefined || wasDataLimitEnabled === undefined) {
           return;
         } else if (isDataLimitEnabled === wasDataLimitEnabled) {
           return;
         }
+        this.isAccessKeyDataLimitEnabled = isDataLimitEnabled;
         if (isDataLimitEnabled) {
           this._requestSetAccessKeyDataLimit();
         } else {
           this.fire('RemoveAccessKeyDataLimitRequested');
+        }
+      },
+      _handleAccessKeyDataLimitInputKeyDown: function(event) {
+        if (event.key === 'Escape') {
+          this.$.accessKeyDataLimitInput.value = this.accessKeyDataLimit.value;
+          this.$.accessKeyDataLimitInput.blur();
+        } else if (event.key === 'Enter') {
+          this.$.accessKeyDataLimitInput.blur();
         }
       },
       _requestSetAccessKeyDataLimit: function() {
@@ -294,6 +336,9 @@
         const value = Number(this.$.accessKeyDataLimitInput.value);
         const unit = this.$.accessKeyDataLimitUnits.selected;
         this.fire('SetAccessKeyDataLimitRequested', {limit: {value, unit}});
+      },
+      _computeDataLimitsEnabledName: function(isAccessKeyDataLimitEnabled) {
+        return isAccessKeyDataLimitEnabled ? 'enabled' : 'disabled';
       },
       _computeShouldShowExperiments: function(supportsAccessKeyDataLimit) {
         return supportsAccessKeyDataLimit;
