Specify f1-micro machine type
Looking at Prometheus for some large servers showed that we never get
above a few hundred megabytes in memory usage and don't go anywhere near
the 10 GB of disk space's worth of virtual memory + persistence.

--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -202,7 +202,7 @@
                   <li inner-h-t-m-l="[[localize('gcp-create-vm', 'openLink', '<a href=https://console.cloud.google.com/compute/instancesAdd>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"></li>
                   <li>Type "outline-server" in the "Name" field</li>
                   <li>Select a region close to where the server's users will be under "Region"</li>
-                  <li>TODOBEFOREPUSH Should we lower Machine type?  Definitely at least to g1-small, can we do f1-micro?  Do we want instructions on how to decide?  As in, about how many users per machine type</li>
+                  <li>Select "f1-micro" under "Machine type"</li>
                   <li>Click "Change" under "Boot disk"</li>
                   <li>Choose "CoreOS" under Operating System, and "CoreOS stable" under Version</li>
                   <li>[[localize('gcp-click-create')]]</li>
