--- a/src/server_manager/ui_components/outline-manual-server-entry.html
+++ b/src/server_manager/ui_components/outline-manual-server-entry.html
@@ -175,14 +175,14 @@
             <!-- TODO(alalama): localize numbers  -->
             <span class="stepcircle">1</span>
             <!-- TODOBEFOREMERGE i18n -->
-            <div class="instructions">Create your server</div>
-            <div class="drop-down" on-tap="_toggleGcpCreateServerDropDown">
+            <div class="instructions">Create your Google Cloud Project</div>
+            <div class="drop-down" on-tap="_toggleGcpCreateProjectDropDown">
               <img src="images/gcp-logo.svg" />
               <span>[[localize('manual-server-instructions')]]</span>
-              <iron-icon id="gcpCreateServerDropDownIcon" icon="arrow-drop-down"></iron-icon>
+              <iron-icon id="gcpCreateProjectDropDownIcon" icon="arrow-drop-down"></iron-icon>
             </div>
           </div>
-          <iron-collapse id="gcpCreateServerDropDown">
+          <iron-collapse id="gcpCreateProjectDropDown">
             <div class="section-content-instructions">
               <!-- TODOBEFOREMERGE i18n -->
               <!-- TODOBEFOREMERGE images -->
@@ -190,21 +190,6 @@
                 <ol>
                   <li inner-h-t-m-l="[[localize('gcp-create-project', 'openLink', '<a href=https://console.cloud.google.com/projectcreate>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"></li>
                   <li>Name your project in the "Project name" field.</li>
-                  <li>[[localize('gcp-click-create')]]</li>
-                </ol>
-              </outline-cloud-instructions-view>
-            </div>
-            <div class="section-content-instructions">
-              <!-- TODOBEFOREMERGE i18n -->
-              <!-- TODOBEFOREMERGE images -->
-              <outline-cloud-instructions-view title="Create a VM Instance" thumbnail-path="images/fine.png" image-path="images/greatwave.jpg" localize="[[localize]]">
-                <ol>
-                  <li inner-h-t-m-l="[[localize('gcp-create-vm', 'openLink', '<a href=https://console.cloud.google.com/compute/instancesAdd>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"></li>
-                  <li>Type "outline-server" in the "Name" field</li>
-                  <li>Select a region close to where the server's users will be under "Region"</li>
-                  <li>Select "f1-micro" under "Machine type"</li>
-                  <li>Click "Change" under "Boot disk"</li>
-                  <li>Choose "CoreOS" under Operating System, and "CoreOS stable" under Version</li>
                   <li>[[localize('gcp-click-create')]]</li>
                 </ol>
               </outline-cloud-instructions-view>
@@ -235,14 +220,35 @@
                 </ol>
               </outline-cloud-instructions-view>
             </div>
+          </iron-collapse>
+        </div>
+        <div class="section" hidden$="[[!isCloudProviderGcp]]">
+          <div class="section-header">
+            <!-- TODO(alalama): localize numbers  -->
+            <span class="stepcircle">3</span>
+            <!-- TODOBEFOREMERGE i18n -->
+            <div class="instructions">Create your server</div>
+            <div class="drop-down" on-tap="_toggleGcpCreateServerDropDown">
+              <img src="images/gcp-logo.svg" />
+              <span>[[localize('manual-server-instructions')]]</span>
+              <iron-icon id="gcpCreateServerDropDownIcon" icon="arrow-drop-down"></iron-icon>
+            </div>
+          </div>
+          <iron-collapse id="gcpCreateServerDropDown">
             <div class="section-content-instructions">
-              <outline-cloud-instructions-view title="[[localize('manual-server-assign-firewall')]]" thumbnail-path="images/gcp-thumbnail-2.png" image-path="images/gcp-screenshot-2.png"" localize="[[localize]]">
+              <!-- TODOBEFOREMERGE i18n -->
+              <!-- TODOBEFOREMERGE images -->
+              <outline-cloud-instructions-view title="Create a VM Instance" thumbnail-path="images/fine.png" image-path="images/greatwave.jpg" localize="[[localize]]">
                 <ol>
-                  <li inner-h-t-m-l="[[localize('gcp-firewall-assign-0', 'openLink', '<a href=https://console.cloud.google.com/compute/instances>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"></li>
-                  <li>[[localize('gcp-firewall-assign-1')]]</li>
-                  <li>[[localize('gcp-firewall-assign-2')]]</li>
-                  <li>[[localize('gcp-firewall-assign-3')]]</li>
-                  <li>[[localize('gcp-firewall-assign-4')]]</li>
+                  <li inner-h-t-m-l="[[localize('gcp-create-vm', 'openLink', '<a href=https://console.cloud.google.com/compute/instancesAdd>', 'closeLink', '<iron-icon icon=open-in-new></iron-icon></a>')]]"></li>
+                  <li>Type "outline-server" in the "Name" field</li>
+                  <li>Select a region close to where the server's users will be under "Region"</li>
+                  <li>Select "f1-micro" under "Machine type"</li>
+                  <li>Click "Change" under "Boot disk"</li>
+                  <li>Choose "CoreOS" under Operating System, and "CoreOS stable" under Version</li>
+                  <li>Click "Management, security, disks, networking, sole tenancy", then "Networking"</li>
+                  <li>Type "outline" in the "Network tags" field</li>
+                  <li>[[localize('gcp-click-create')]]</li>
                 </ol>
               </outline-cloud-instructions-view>
             </div>
@@ -386,7 +392,7 @@
         this.isCloudProviderAws = this._computeIsCloudProviderAws(newProvider);
         this.isCloudProviderGcp = this._computeIsCloudProviderGcp(newProvider);
         this.isGenericCloudProvider = this._computeIsGenericCloudProvider(newProvider);
-        this.installScriptStepNumber = this.isGenericCloudProvider ? 1 : this.isCloudProviderGcp ? 3 : 2;
+        this.installScriptStepNumber = this.isGenericCloudProvider ? 1 : this.isCloudProviderGcp ? 4 : 2;
         this.pasteJsonStepNumber = this.installScriptStepNumber + 1;
       },
       _computeCloudProviderName: function(cloudProvider) {
@@ -413,6 +419,9 @@
       },
       _toggleGcpCreateServerDropDown: function() {
         this._toggleDropDown(this.$.gcpCreateServerDropDown, this.$.gcpCreateServerDropDownIcon);
+      },
+      _toggleGcpCreateProjectDropDown: function() {
+        this._toggleDropDown(this.$.gcpCreateProjectDropDown, this.$.gcpCreateProjectDropDownIcon);
       },
       _toggleDropDown: function(dropDown, icon) {
         dropDown.toggle();
